# hledger-genai

./: README.md  hello.py  ioutils.py  main.py  pyproject.toml  raghelpers.py
src/hledger-genai/: models.py  vecstore_loader.py
src/hledger_genai/: main.py  raghelpers.py
